	when documented to do so.  (Discovered whilst investigating
	PR#14189.)

    o	match(incomparables=<non-NULL>) could in rare cases infinite-
    	loop.

    o   poisson.test() needed to pass 'conf.level' to binom.test()
        (PR#14195)

    o	The "nls" method for df.residual() gave incorrect results for
	models fitted with na.action = na.exclude.  (PR#14194)



		CHANGES IN R VERSION 2.10.1


NEW FEATURES

    o	The PCRE library has been updated to version 8.00.

    o	R CMD INSTALL has new options --no-R, --no-libs, --no-data,
	--no-help, --no-demo, --no-exec, and --no-inst to suppress
	installation of the specified part of the package.  These are
	intended for special purposes (e.g. building a database
	of help pages without fully installing all packages).

    o	The documented line-length limit of 4095 bytes when reading
	from the console now also applies also to parse(file="")
	(which previously had a limit of around 1024 bytes).

    o	A Bioconductor mirror can be set for use by setRepositories()
	via the option "BioC_mirror", e.g. the European mirror can be
	selected by
	options(BioC_mirror="http://bioconductor.statistik.tu-dortmund.de")

    o	Double-clicking in a tk_select.list() list box now selects the
	item and closes the list box (as happens on the Windows
	select.list() widget).


INSTALLATION

    o	configure will be able to find a usable libtiff in some rare
	circumstances where it did not previously (where libtiff
	needed to be linked explicitly against -ljpeg).

    o	Making refman.pdf works around a problem with the indexing
	with hyperref 6.79d and later.


DEPRECATED & DEFUNCT

    o	The 'extended' argument is deprecated in strsplit(), grep(),
	grepl(), sub(), gsub(), regexpr() and gregexpr() (not just the
	value extended = FALSE) and will be removed in R 2.11.0.


BUG FIXES

    o	trigamma(x) and other psigamma(x, n) calls are now accurate for
	very large abs(x). (PR#14020)
