@@ -1359,6 +1359,7 @@ SEXP attribute_hidden do_contour(SEXP call, SEXP op, SEXP args, SEXP env)
 
     if (length(args) < 4)
 	error(_("too few arguments"));
+    PrintDefaults(R_GlobalEnv); /* prepare for labelformat */
 
     oargs = args;
 
@@ -1654,6 +1655,7 @@ SEXP attribute_hidden do_filledcontour(SEXP call, SEXP op, SEXP args, SEXP env)
     GCheckState(dd);
 
     checkArity(op,args);
+    PrintDefaults(R_GlobalEnv); /* prepare for labelformat */
     oargs = args;
 
     sx = CAR(args);
